--- a/html/index.html
+++ b/html/index.html
@@ -8,41 +8,55 @@
 
     <!--Estilos-->
 
-    <link href="../css/texto1.css" rel="stylesheet">
+    <link href="../css/cabecalho.css" rel="stylesheet">
+    <link href="../css/menu.css" rel="stylesheet">
+
     <title>Transportes Baggeto</title>
 
 </head>
 
 <body>
-    <main>
-        <div class="um">
-            <center>
 
-                <img src="../imagens/baggeto.png" alt="" style="width: 150 ;height: 150px;" />
+    <!--Div Cabeçalho -->
 
-                <FONT FACE=Arial COLOR="#7DBDDE">
-                    <i>Seu Horizonte é o Nosso Destino.</i>
-                </FONT>
+    < <div class="cabecalho">
+        <center>
 
-            </center>
+            <img src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
+
+            <FONT FACE=Arial COLOR="#7DBDDE ">
+                <i>Seu Horizonte é o Nosso Destino.</i>
+            </FONT>
+
+        </center>
         </div>
+
+        <!--Div Menu -->
 
         <div>
             <center>
 
                 <nav id="menu">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Missão</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="# ">Principal</a></li>
+                        <li><a href="# ">Empresa</a></li>
+                        <li><a href="# ">Soluções</a></li>
+                        <li><a href="# ">Filiais</a></li>
+                        <li>
+                            <a href="# ">Área de Atuação</a>
+                        </li>
+                        <li>
+                            <a href="# ">Contato</a>
+                        </li>
+                        <li>
+                            <a href="# ">Trabalhe Conosco</a>
+                        </li>
                     </ul>
                 </nav>
 
             </center>
         </div>
-    </main>
+
 </body>
 
 </html>
