--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 
     <!--Div Cabeçalho -->
 
-    < <div class="cabecalho">
+    <div class="cabecalho">
         <center>
 
             <img src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
@@ -29,34 +29,42 @@
             </FONT>
 
         </center>
-        </div>
+    </div>
 
-        <!--Div Menu -->
+    <!--Div Menu -->
 
-        <div>
-            <center>
+    <div>
+        <center>
 
-                <nav id="menu">
-                    <ul>
-                        <li><a href="# ">Principal</a></li>
-                        <li><a href="# ">Empresa</a></li>
-                        <li><a href="# ">Soluções</a></li>
-                        <li><a href="# ">Filiais</a></li>
-                        <li>
-                            <a href="# ">Área de Atuação</a>
-                        </li>
-                        <li>
-                            <a href="# ">Contato</a>
-                        </li>
-                        <li>
-                            <a href="# ">Trabalhe Conosco</a>
-                        </li>
-                    </ul>
-                </nav>
+            <nav id="menu">
+                <ul>
+                    <li><a href="# ">Principal</a></li>
+                    <li><a href="# ">Empresa</a></li>
+                    <li><a href="# ">Soluções</a></li>
+                    <li><a href="# ">Filiais</a></li>
+                    <li>
+                        <a href="# ">Área de Atuação</a>
+                    </li>
+                    <li>
+                        <a href="# ">Contato</a>
+                    </li>
+                    <li>
+                        <a href="# ">Trabalhe Conosco</a>
+                    </li>
+                </ul>
+            </nav>
 
-            </center>
-        </div>
+        </center>
+    </div>
 
+    <div>
+        <img src="../img/img_principal.jpg " alt=" " style="width: 100% ;height: 100%; " />
+    </div>
+    <div class="empresa">
+        <center>
+            <h1>EMPRESA</h1>
+        </center>
+    </div>
 </body>
 
 </html>
