--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 
     <link href="../css/cabecalho.css" rel="stylesheet">
     <link href="../css/menu.css" rel="stylesheet">
+    <link href="../css/empresa.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -17,21 +18,21 @@
 
 <body>
 
-    <!--Div Cabeçalho -->
+    <!--Cabeçalho -->
 
     <div class="cabecalho">
         <center>
 
             <img src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
 
-            <FONT FACE=Arial COLOR="#7DBDDE ">
+            <FONT size="6" FACE=sans-serif COLOR="#7DBDDE ">
                 <i>Seu Horizonte é o Nosso Destino.</i>
             </FONT>
 
         </center>
     </div>
 
-    <!--Div Menu -->
+    <!--Menu -->
 
     <div>
         <center>
@@ -57,14 +58,80 @@
         </center>
     </div>
 
+    <!--Imagem Principal-->
     <div>
         <img src="../img/img_principal.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
-    <div class="empresa">
+
+    <!--Titulo Empresa-->
+
+    <div class="titulo_azul">
         <center>
-            <h1>EMPRESA</h1>
+            <h2>EMPRESA</h2>
         </center>
     </div>
+
+    <!--Imagem1 Empresa-->
+    <div class="posicao_img">
+
+        <img src="../img/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+    </div>
+
+    <!--posicao Texto1-->
+    <div class="posicao_texto1">
+
+        <p class="paragrafo1">
+
+            A Transportes Baggeto iniciou sua trajetória no ano de 1983. Silvério Baggio começou no ramo de caminhões aos seus 18 anos, por influência de seu pai agricultor e caminhoneiro. Ele buscava uma maneira de gerar renda para poder se sustentar. Nesses nove
+            anos, dentro de uma cabine de caminhão, transportando riquezas em todo território brasileiro, deu-se início ao sonho da empresa. Tomou gosto pela profissão e especializou-se no ramo de transportes. Em 1992, abriu sua própria empresa: a Transportes
+            Baggeto LTDA, nome originado pelo apelido dado por seus companheiros de trabalho. A empresa começa suas atividades com 2 caminhões, mas muitos sonhos.
+
+        </p>
+
+    </div>
+
+    <!--Imagem2 Empresa-->
+    <div class="posicao_img2">
+
+        <img src="../img/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+    </div>
+
 </body>
+
+<!--Paragrafo2-->
+<div class="posicao_texto2">
+    <p class="paragrafo2">
+        Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
+        Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada, proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a Transportes Baggeto acumulou credibilidade
+        e elogios, deixando a certeza de que a Baggeto está no caminho certo. Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação.
+        Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a importância das pessoas no desenvolvimento da empresa, pois
+        é a nossa gente que nos faz evoluir. Em vista disso, todos precisam estar motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando condições de trabalho adequadas, mantendo a equipe focada,
+        treinada e atualizada, além de procurar sempre aproximar suas famílias da empresa.
+
+    </p>
+
+</div>
+
+<!--Imagem3 Empresa-->
+<div class="posicao_img3">
+
+    <img src="../img/empresa3.png " alt=" " style="width: 307px ;height: 208px; " />
+
+</div>
+
+<!--Imagem4 Empresa-->
+<div class="posicao_img4">
+
+    <img src="../img/empresa4.jpg " alt=" " style="width: 307px ;height: 208px; " />
+
+</div>
+<!--Imagem5 Empresa-->
+<div class="posicao_img5">
+
+    <img src="../img/empresa5.jpg " alt=" " style="width: 307px ;height: 208px; " />
+
+</div>
 
 </html>
