--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <link href="../css/cabecalho.css" rel="stylesheet">
     <link href="../css/menu.css" rel="stylesheet">
     <link href="../css/empresa.css" rel="stylesheet">
+    <link href="../css/video.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -132,6 +133,71 @@
 
     <img src="../img/empresa5.jpg " alt=" " style="width: 307px ;height: 208px; " />
 
+</div>
+
+<!--Video Empresa-->
+<div class="posicao_video">
+    <video width="520" height="340" controls>
+
+        <source src="../video/video_baggeto.mp4" type="video/mp4">
+        Seu navegador nao suporta esse tipo de Video.
+
+    </video>
+</div>
+<!--Imagem6 Empresa-->
+<div class="posicao_img6">
+
+    <img src="../img/empresa6.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+</div>
+
+<!--Pocisão Negócio-->
+<div class="posicao_texto_negocio">
+    <h1>Negócio:</h1>
+    <p>Confiabilidade e segurança em soluções logísticas.</p>
+</div>
+
+<!--Imagem7 Empresa-->
+<div class="posicao_img7">
+
+    <img src="../img/empresa7.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+</div>
+
+<!--Pocisão Missao-->
+<div class="posicao_texto_missao">
+    <h1>Missão:</h1>
+    <p>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</p>
+</div>
+
+<!--Imagem8 Empresa-->
+<div class="posicao_img8">
+
+    <img src="../img/empresa8.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+</div>
+
+<!--Pocisão Visão-->
+<div class="posicao_texto_visao">
+    <h1>Visão:</h1>
+    <p>Ser uma empresa fundamental na logística brasileira.</p>
+</div>
+
+<!--Imagem9 Empresa-->
+<div class="posicao_img9">
+
+    <img src="../img/empresa9.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+</div>
+
+<!--Pocisão Valores-->
+<div class="posicao_texto_valores">
+    <h1>Valores:</h1>
+    <p>Confiança e credibilidade; respeitar o cliente; honrar compromissos, ser transparente, agir com seriedade e rigor, ser responsável; servir o cliente cada vez melhor. Comprometimento: desenvolver as atividades com comprometimento e paixão, traduzida
+        na utilização de meios adequados e na eficiência dos processos. Agilidade: dinamismo e simplicidade fazem parte do nosso DNA e, para nos mantermos competitivos, estes atributos devem estar presentes em todas as operações e processos da empresa.
+        Segurança: garantir a integridade dos serviços por meio de atitudes e comportamentos, evitando ao máximo o número de sinistros e avarias. Ética: ser verdadeiro com os clientes, colaboradores, sócios e sociedade, tratando todos como gostaria de
+        ser tratado, de forma respeitosa, sabendo ouvir e entender o que está no íntimo das pessoas. Sustentabilidade: econômica, social e ambiental; crescer economicamente com solidez financeira por meio da boa gestão das pessoas, sociedade e meio ambiente.
+    </p>
 </div>
 
 </html>
