--- a/html/index.html
+++ b/html/index.html
@@ -182,6 +182,18 @@
     <h1>Visão:</h1>
     <p>Ser uma empresa fundamental na logística brasileira.</p>
 </div>
+<!--Imagem10 Empresa-->
+<div class="posicao_img10">
+
+    <img src="../img/empresa10.jpg " alt=" " style="width: 238px ;height: 156px; " />
+
+</div>
+
+<!--Pocisão Frota-->
+<div class="posicao_texto_frota">
+    <h1>Frota:</h1>
+    <p>Caminhões novos e modernos entre bitrens e rodotrens mantidos <br>sobre rigorosos cuidados mecânicos e conduzidos por motoristas responsáveis e experientes. Nossos veículos<br> são rastreados via satélite com uma comunicação direta com a empresa<br>        garantindo segurança, estabilidade e a entrega dentro do prazo.</p>
+</div>
 
 <!--Imagem9 Empresa-->
 <div class="posicao_img9">
@@ -198,6 +210,25 @@
         Segurança: garantir a integridade dos serviços por meio de atitudes e comportamentos, evitando ao máximo o número de sinistros e avarias. Ética: ser verdadeiro com os clientes, colaboradores, sócios e sociedade, tratando todos como gostaria de
         ser tratado, de forma respeitosa, sabendo ouvir e entender o que está no íntimo das pessoas. Sustentabilidade: econômica, social e ambiental; crescer economicamente com solidez financeira por meio da boa gestão das pessoas, sociedade e meio ambiente.
     </p>
+</div>
+<!--Imagem Sassmaq-->
+<div class="posicao_img_sassmaq">
+
+    <img src="../img/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
+
+
+</div>
+<!--Imagem Certificado Sassmaq-->
+<div class="posicao_img_certificado_sassmaq">
+
+    <img src="../img/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
+
+</div>
+<!--Imagem Despoluir-->
+<div class="posicao_img_despoluir">
+
+    <img src="../img/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
+
 </div>
 
 </html>
