--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
     <link href="../css/menu.css" rel="stylesheet">
     <link href="../css/empresa.css" rel="stylesheet">
     <link href="../css/video.css" rel="stylesheet">
+    <link href="../css/solucoes.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -75,7 +76,7 @@
     <!--Imagem1 Empresa-->
     <div class="posicao_img">
 
-        <img src="../img/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
+        <img src="../img/empresa/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
     </div>
 
@@ -95,7 +96,7 @@
     <!--Imagem2 Empresa-->
     <div class="posicao_img2">
 
-        <img src="../img/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
+        <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
     </div>
 
@@ -118,20 +119,20 @@
 <!--Imagem3 Empresa-->
 <div class="posicao_img3">
 
-    <img src="../img/empresa3.png " alt=" " style="width: 307px ;height: 208px; " />
+    <img src="../img/empresa/empresa3.png " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 
 <!--Imagem4 Empresa-->
 <div class="posicao_img4">
 
-    <img src="../img/empresa4.jpg " alt=" " style="width: 307px ;height: 208px; " />
+    <img src="../img/empresa/empresa4.jpg " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 <!--Imagem5 Empresa-->
 <div class="posicao_img5">
 
-    <img src="../img/empresa5.jpg " alt=" " style="width: 307px ;height: 208px; " />
+    <img src="../img/empresa/empresa5.jpg " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 
@@ -147,7 +148,7 @@
 <!--Imagem6 Empresa-->
 <div class="posicao_img6">
 
-    <img src="../img/empresa6.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/empresa6.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
@@ -160,7 +161,7 @@
 <!--Imagem7 Empresa-->
 <div class="posicao_img7">
 
-    <img src="../img/empresa7.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/empresa7.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
@@ -173,7 +174,7 @@
 <!--Imagem8 Empresa-->
 <div class="posicao_img8">
 
-    <img src="../img/empresa8.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/empresa8.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
@@ -185,7 +186,7 @@
 <!--Imagem10 Empresa-->
 <div class="posicao_img10">
 
-    <img src="../img/empresa10.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/empresa10.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
@@ -198,7 +199,7 @@
 <!--Imagem9 Empresa-->
 <div class="posicao_img9">
 
-    <img src="../img/empresa9.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/empresa9.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
@@ -214,21 +215,40 @@
 <!--Imagem Sassmaq-->
 <div class="posicao_img_sassmaq">
 
-    <img src="../img/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
+    <img src="../img/empresa/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
 
 
 </div>
 <!--Imagem Certificado Sassmaq-->
 <div class="posicao_img_certificado_sassmaq">
 
-    <img src="../img/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
+    <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
 
 </div>
 <!--Imagem Despoluir-->
 <div class="posicao_img_despoluir">
 
-    <img src="../img/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
+    <img src="../img/empresa/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
 
+</div>
+
+<!--Soluções -->
+
+<div id="div_solucoes">
+    <img class="posicao_img_solucoes" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes2" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes3" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes4" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes5" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes6" src="../img/fundo_solucoes.png " alt=" " />
+</div>
+
+<!--Titulo Filiais-->
+
+<div class="titulo_azul">
+    <center>
+        <h2>FILIAIS</h2>
+    </center>
 </div>
 
 </html>
