--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <link href="../css/empresa.css" rel="stylesheet">
     <link href="../css/video.css" rel="stylesheet">
     <link href="../css/solucoes.css" rel="stylesheet">
+    <link href="../css/filiais.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -235,12 +236,12 @@
 <!--Soluções -->
 
 <div id="div_solucoes">
-    <img class="posicao_img_solucoes" src="../img/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes2" src="../img/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes3" src="../img/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes4" src="../img/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes5" src="../img/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes6" src="../img/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes2" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes3" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes4" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes5" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes6" src="../img/solucoes/fundo_solucoes.png " alt=" " />
 </div>
 
 <!--Titulo Filiais-->
@@ -249,6 +250,88 @@
     <center>
         <h2>FILIAIS</h2>
     </center>
+</div>
+
+<!--Imagem Matriz-->
+<div class="posicao_img_matriz">
+
+    <img src="../img/filiais/matriz.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Matriz-->
+<div class="posicao_texto_matriz">
+    <h1>Matriz</h1>
+    <p>Cidade: Orleans, SC<br>Rua: Atilio Fenilli<br>Nº S/N<br>Bairro:Corridas<br>Cep:88870-000<br>Fone: (48) 3466-4782
+    </p>
+</div>
+
+<!--Imagem Filial SP1-->
+<div class="posicao_img_sp1">
+
+    <img src="../img/filiais/filial_sp.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Imagem Filial SP2-->
+<div class="posicao_img_sp2">
+
+    <img src="../img/filiais/filial_sp2.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial SP-->
+<div class="posicao_texto_sp">
+
+    <p>Cidade: Cordeirópolis, SP<br>Rodivia: Washington Luiz, Km 154-5<br>Numero: 196<br>Cep: 13490-000<br>Fone: (19) 3546-8193 / 3546-8204</p>
+
+</div>
+
+<!--Imagem Filial PE-->
+<div class="posicao_img_pe">
+
+    <img src="../img/filiais/filial_pe.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto PE-->
+<div class="posicao_texto_pe">
+    <p>Cidade: Trindade, PE<br>Rua: Osvaldo Cruz<br>Nº 381<br>Bairro: Centro<br>Cep: 56250-000 </p>
+</div>
+<!--Imagem Filial PB-->
+<div class="posicao_img_pb">
+
+    <img src="../img/filiais/filial_pb.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial PB-->
+<div class="posicao_texto_pb">
+    <p>Cidade: Bayeux, PB<br>Rua: Francisco Marques da Fonseca<br>Nº 206<br>Bairro: Alto da Boa Vista<br>Cep: 58308-001
+    </p>
+</div>
+<!--Imagem Filial MG-->
+<div class="posicao_img_mg">
+
+    <img src="../img/filiais/filial_mg.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial MG-->
+<div class="posicao_texto_mg">
+    <p>Cidade: Estiva, MG<br>Rodovia: Fernao Dias, Km 817<br>Nº S/N<br>Bairro: Corrego dos Mulatos<br>Cep: 37542-000
+    </p>
+</div>
+<!--Imagem Filial BA-->
+<div class="posicao_img_ba">
+
+    <img src="../img/filiais/filial_ba.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial BA-->
+<div class="posicao_texto_ba">
+    <p>Cidade: Barreiras, BA<br>Rodovia: BR 242 020, Km 577,5<br>Nº S/N<br>Bairro: Area Rural de Barreiras<br>Cep: 47819-899 </p>
 </div>
 
 </html>
