--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,8 @@
     <link href="../css/video.css" rel="stylesheet">
     <link href="../css/solucoes.css" rel="stylesheet">
     <link href="../css/filiais.css" rel="stylesheet">
+    <link href="../css/area_atuacao.css" rel="stylesheet">
+    <link href="../css/contato.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -333,5 +335,72 @@
 <div class="posicao_texto_ba">
     <p>Cidade: Barreiras, BA<br>Rodovia: BR 242 020, Km 577,5<br>Nº S/N<br>Bairro: Area Rural de Barreiras<br>Cep: 47819-899 </p>
 </div>
+<!--Imagem Filial PA-->
+<div class="posicao_img_pa">
+
+    <img src="../img/filiais/filial_pa.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial PA-->
+<div class="posicao_texto_pa">
+    <p>Cidade: Paragominas, PA<br>Rodovia: BR 010, Km 1650<br>Nº S/N<br>Bairro: Nagibão<br>Cep: 68625-970 </p>
+</div>
+<!--Imagem Filial PR-->
+<div class="posicao_img_pr">
+
+    <img src="../img/filiais/filial_pr.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial PR-->
+<div class="posicao_texto_pr">
+    <p>Cidade: São José dos Pinhais, PR<br>Rodovia: BR 376, Km 626<br>Sala: 06<br>Bairro: Campo Largo da Roseira<br>Cep: 83090-360 </p>
+</div>
+<!--Imagem Filial RS-->
+<div class="posicao_img_rs">
+
+    <img src="../img/filiais/filial_rs.jpg " alt=" " style="width: 242px ;height: 147px; " />
+
+</div>
+
+<!--Pocisão Texto Filial RS-->
+<div class="posicao_texto_rs">
+    <p>Cidade: Santo Antonio da Patrulha, RS<br>Rua: João Carlos Benficad<br>Numero: 474<br>Bairro: Local de Passos da Cruz
+        <br>Cep: 95500-000 </p>
+</div>
+<!--Area de Atuacao-->
+<div id="div_area_atuacao">
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+        <h1 class="titulo_branco">
+            ÁREA DE ATUAÇÃO</h1>
+        <br>
+        <br>
+        <br>
+    </center> <img class="posicao_img_area_atuacao" src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; " <br>
+    <br>
+    <br>
+    <br>
+</div>
+<div>
+    <ul class="paragrafo_branco">
+        <li class="posicao_texto_area_atuacao">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
+
+    </ul>
+</div>
+<!--Contato-->
+
+<div class="titulo_azul">
+    <center>
+        <h2>CONTATO</h2>
+    </center>
+</div>
+<center>
+    <h2>Nossos Endereços</h2>
+</center>
 
 </html>
