--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
     <link href="../css/filiais.css" rel="stylesheet">
     <link href="../css/area_atuacao.css" rel="stylesheet">
     <link href="../css/contato.css" rel="stylesheet">
+    <link href="../css/rodape.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -402,5 +403,40 @@
 <center>
     <h2>Nossos Endereços</h2>
 </center>
+<!--Texto Contato1-->
+<div class="posicao_texto_contato1">
+
+    <br><br><br>
+    <p>Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
+        <br> financeiro@transportesbaggeto.com.br<br><br> Cargas <br>cargas@transportesbaggeto.com.br<br><br> Compras
+        <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br<br>
+
+    </p>
+
+</div>
+<!--Texto Contato2-->
+<div class="posicao_texto_contato2">
+
+    <br><br><br>
+    <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
+        <br><br>Financeiro <br>rossi@transportesbaggeto.com.br<br><br> Faturamento
+        <br>faturamentosp@transportesbaggeto.com.br
+    </p>
+
+</div>
+<!--Rodape-->
+<div id="div_rodape">
+    <br>
+    <br>
+    <br>
+    <br>
+    <center><img src=" ../img/webmail.png " alt=" " /></center>
+    <a class="posicao_texto_webmail" href="https://br924.hostgator.com.br:2096" target="_blank">WebMail</a>
+    <div>
+        <center><img src="../img/curriculo.png " alt=" " <i>Envie Seu Currículo</i>
+        </center>
+    </div>
+
+</div>
 
 </html>
