--- a/html/index.html
+++ b/html/index.html
@@ -27,15 +27,17 @@
     <!--Cabeçalho -->
 
     <div class="cabecalho">
-        <center>
+        <br>
+        <img class="posicao_img_baggeto" src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
 
-            <img src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
+        <FONT size="5" FACE=sans-serif COLOR="#7DBDDE ">
+            <i class="posicao_mensagem">Seu Horizonte é o Nosso Destino.</i>
 
-            <FONT size="6" FACE=sans-serif COLOR="#7DBDDE ">
-                <i>Seu Horizonte é o Nosso Destino.</i>
-            </FONT>
+            <br>
+            <br>
 
-        </center>
+        </FONT>
+
     </div>
 
     <!--Menu -->
@@ -45,6 +47,7 @@
 
             <nav id="menu">
                 <ul>
+                    <br>
                     <li><a href="# ">Principal</a></li>
                     <li><a href="# ">Empresa</a></li>
                     <li><a href="# ">Soluções</a></li>
@@ -111,11 +114,13 @@
     <p class="paragrafo2">
         Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
         Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada, proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a Transportes Baggeto acumulou credibilidade
-        e elogios, deixando a certeza de que a Baggeto está no caminho certo. Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação.
-        Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a importância das pessoas no desenvolvimento da empresa, pois
-        é a nossa gente que nos faz evoluir. Em vista disso, todos precisam estar motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando condições de trabalho adequadas, mantendo a equipe focada,
-        treinada e atualizada, além de procurar sempre aproximar suas famílias da empresa.
-
+        e elogios, deixando a certeza de que a Baggeto está no caminho certo.
+    </p>
+    <p class="paragrafo2">
+        Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação. Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso
+        foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a importância das pessoas no desenvolvimento da empresa, pois é a nossa gente que nos faz evoluir. Em vista disso, todos precisam estar
+        motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando condições de trabalho adequadas, mantendo a equipe focada, treinada e atualizada, além de procurar sempre aproximar suas famílias da
+        empresa.
     </p>
 
 </div>
