--- a/html/index.html
+++ b/html/index.html
@@ -69,8 +69,31 @@
 
     <!--Imagem Principal-->
     <div>
-        <img src="../img/img_principal.jpg " alt=" " style="width: 100% ;height: 100%; " />
+        <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
+
+    <!--Div Agilidade-->
+    <div id="div_agilidade">
+
+    </div>
+    <!--Div Seguranca-->
+    <div id="div_seguranca">
+
+    </div>
+    </div>
+    <!--Div Confianca-->
+    <div id="div_confianca">
+
+    </div>
+    <!--Texto Agilidade-->
+
+    <h3 class="agilidade">AGILIDADE</h3>
+    <!--Texto Seguranca-->
+
+    <h3 class="seguranca">SEGURANÇA</h3>
+    <!--Texto Confianca-->
+
+    <h3 class="confianca">CONFIANÇA</h3>
 
     <!--Titulo Empresa-->
 
@@ -414,8 +437,7 @@
     <br><br><br>
     <p>Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
         <br> financeiro@transportesbaggeto.com.br<br><br> Cargas <br>cargas@transportesbaggeto.com.br<br><br> Compras
-        <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br<br>
-
+        <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br
     </p>
 
 </div>
