--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
 
     <!--Imagem Principal-->
     <div>
-        <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 100% ;height: 100%; " />
+        <img src="../img/capa.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
 
     <!--Div Agilidade-->
@@ -87,33 +87,33 @@
     </div>
     <!--Texto Agilidade-->
 
-    <h3 class="agilidade">AGILIDADE</h3>
+    <h3 class="agilidade ">AGILIDADE</h3>
     <!--Texto Seguranca-->
 
-    <h3 class="seguranca">SEGURANÇA</h3>
+    <h3 class="seguranca ">SEGURANÇA</h3>
     <!--Texto Confianca-->
 
-    <h3 class="confianca">CONFIANÇA</h3>
+    <h3 class="confianca ">CONFIANÇA</h3>
 
     <!--Titulo Empresa-->
 
-    <div class="titulo_azul">
+    <div class="titulo_azul ">
         <center>
             <h2>EMPRESA</h2>
         </center>
     </div>
 
     <!--Imagem1 Empresa-->
-    <div class="posicao_img">
+    <div class="posicao_img ">
 
         <img src="../img/empresa/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
     </div>
 
     <!--posicao Texto1-->
-    <div class="posicao_texto1">
+    <div class="posicao_texto1 ">
 
-        <p class="paragrafo1">
+        <p class="paragrafo1 ">
 
             A Transportes Baggeto iniciou sua trajetória no ano de 1983. Silvério Baggio começou no ramo de caminhões aos seus 18 anos, por influência de seu pai agricultor e caminhoneiro. Ele buscava uma maneira de gerar renda para poder se sustentar. Nesses nove
             anos, dentro de uma cabine de caminhão, transportando riquezas em todo território brasileiro, deu-se início ao sonho da empresa. Tomou gosto pela profissão e especializou-se no ramo de transportes. Em 1992, abriu sua própria empresa: a Transportes
@@ -124,7 +124,7 @@
     </div>
 
     <!--Imagem2 Empresa-->
-    <div class="posicao_img2">
+    <div class="posicao_img2 ">
 
         <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
@@ -133,13 +133,13 @@
 </body>
 
 <!--Paragrafo2-->
-<div class="posicao_texto2">
-    <p class="paragrafo2">
+<div class="posicao_texto2 ">
+    <p class="paragrafo2 ">
         Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
         Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada, proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a Transportes Baggeto acumulou credibilidade
         e elogios, deixando a certeza de que a Baggeto está no caminho certo.
     </p>
-    <p class="paragrafo2">
+    <p class="paragrafo2 ">
         Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação. Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso
         foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a importância das pessoas no desenvolvimento da empresa, pois é a nossa gente que nos faz evoluir. Em vista disso, todos precisam estar
         motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando condições de trabalho adequadas, mantendo a equipe focada, treinada e atualizada, além de procurar sempre aproximar suas famílias da
@@ -149,94 +149,94 @@
 </div>
 
 <!--Imagem3 Empresa-->
-<div class="posicao_img3">
+<div class="posicao_img3 ">
 
     <img src="../img/empresa/empresa3.png " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 
 <!--Imagem4 Empresa-->
-<div class="posicao_img4">
+<div class="posicao_img4 ">
 
     <img src="../img/empresa/empresa4.jpg " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 <!--Imagem5 Empresa-->
-<div class="posicao_img5">
+<div class="posicao_img5 ">
 
     <img src="../img/empresa/empresa5.jpg " alt=" " style="width: 307px ;height: 208px; " />
 
 </div>
 
 <!--Video Empresa-->
-<div class="posicao_video">
-    <video width="520" height="340" controls>
+<div class="posicao_video ">
+    <video width="520 " height="340 " controls>
 
-        <source src="../video/video_baggeto.mp4" type="video/mp4">
+        <source src="../video/video_baggeto.mp4 " type="video/mp4 ">
         Seu navegador nao suporta esse tipo de Video.
 
     </video>
 </div>
 <!--Imagem6 Empresa-->
-<div class="posicao_img6">
+<div class="posicao_img6 ">
 
     <img src="../img/empresa/empresa6.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
 <!--Pocisão Negócio-->
-<div class="posicao_texto_negocio">
+<div class="posicao_texto_negocio ">
     <h1>Negócio:</h1>
     <p>Confiabilidade e segurança em soluções logísticas.</p>
 </div>
 
 <!--Imagem7 Empresa-->
-<div class="posicao_img7">
+<div class="posicao_img7 ">
 
     <img src="../img/empresa/empresa7.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
 <!--Pocisão Missao-->
-<div class="posicao_texto_missao">
+<div class="posicao_texto_missao ">
     <h1>Missão:</h1>
     <p>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</p>
 </div>
 
 <!--Imagem8 Empresa-->
-<div class="posicao_img8">
+<div class="posicao_img8 ">
 
     <img src="../img/empresa/empresa8.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
 <!--Pocisão Visão-->
-<div class="posicao_texto_visao">
+<div class="posicao_texto_visao ">
     <h1>Visão:</h1>
     <p>Ser uma empresa fundamental na logística brasileira.</p>
 </div>
 <!--Imagem10 Empresa-->
-<div class="posicao_img10">
+<div class="posicao_img10 ">
 
     <img src="../img/empresa/empresa10.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
 <!--Pocisão Frota-->
-<div class="posicao_texto_frota">
+<div class="posicao_texto_frota ">
     <h1>Frota:</h1>
     <p>Caminhões novos e modernos entre bitrens e rodotrens mantidos <br>sobre rigorosos cuidados mecânicos e conduzidos por motoristas responsáveis e experientes. Nossos veículos<br> são rastreados via satélite com uma comunicação direta com a empresa<br>        garantindo segurança, estabilidade e a entrega dentro do prazo.</p>
 </div>
 
 <!--Imagem9 Empresa-->
-<div class="posicao_img9">
+<div class="posicao_img9 ">
 
     <img src="../img/empresa/empresa9.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
 </div>
 
 <!--Pocisão Valores-->
-<div class="posicao_texto_valores">
+<div class="posicao_texto_valores ">
     <h1>Valores:</h1>
     <p>Confiança e credibilidade; respeitar o cliente; honrar compromissos, ser transparente, agir com seriedade e rigor, ser responsável; servir o cliente cada vez melhor. Comprometimento: desenvolver as atividades com comprometimento e paixão, traduzida
         na utilização de meios adequados e na eficiência dos processos. Agilidade: dinamismo e simplicidade fazem parte do nosso DNA e, para nos mantermos competitivos, estes atributos devem estar presentes em todas as operações e processos da empresa.
@@ -245,20 +245,20 @@
     </p>
 </div>
 <!--Imagem Sassmaq-->
-<div class="posicao_img_sassmaq">
+<div class="posicao_img_sassmaq ">
 
     <img src="../img/empresa/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
 
 
 </div>
 <!--Imagem Certificado Sassmaq-->
-<div class="posicao_img_certificado_sassmaq">
+<div class="posicao_img_certificado_sassmaq ">
 
     <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
 
 </div>
 <!--Imagem Despoluir-->
-<div class="posicao_img_despoluir">
+<div class="posicao_img_despoluir ">
 
     <img src="../img/empresa/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
 
@@ -266,164 +266,164 @@
 
 <!--Soluções -->
 
-<div id="div_solucoes">
-    <img class="posicao_img_solucoes" src="../img/solucoes/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes2" src="../img/solucoes/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes3" src="../img/solucoes/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes4" src="../img/solucoes/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes5" src="../img/solucoes/fundo_solucoes.png " alt=" " />
-    <img class="posicao_img_solucoes6" src="../img/solucoes/fundo_solucoes.png " alt=" " />
+<div id="div_solucoes ">
+    <img class="posicao_img_solucoes " src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes2 " src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes3 " src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes4 " src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes5 " src="../img/solucoes/fundo_solucoes.png " alt=" " />
+    <img class="posicao_img_solucoes6 " src="../img/solucoes/fundo_solucoes.png " alt=" " />
 </div>
 
 <!--Titulo Filiais-->
 
-<div class="titulo_azul">
+<div class="titulo_azul ">
     <center>
         <h2>FILIAIS</h2>
     </center>
 </div>
 
 <!--Imagem Matriz-->
-<div class="posicao_img_matriz">
+<div class="posicao_img_matriz ">
 
     <img src="../img/filiais/matriz.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Matriz-->
-<div class="posicao_texto_matriz">
+<div class="posicao_texto_matriz ">
     <h1>Matriz</h1>
     <p>Cidade: Orleans, SC<br>Rua: Atilio Fenilli<br>Nº S/N<br>Bairro:Corridas<br>Cep:88870-000<br>Fone: (48) 3466-4782
     </p>
 </div>
 
 <!--Imagem Filial SP1-->
-<div class="posicao_img_sp1">
+<div class="posicao_img_sp1 ">
 
     <img src="../img/filiais/filial_sp.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Imagem Filial SP2-->
-<div class="posicao_img_sp2">
+<div class="posicao_img_sp2 ">
 
     <img src="../img/filiais/filial_sp2.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial SP-->
-<div class="posicao_texto_sp">
+<div class="posicao_texto_sp ">
 
     <p>Cidade: Cordeirópolis, SP<br>Rodivia: Washington Luiz, Km 154-5<br>Numero: 196<br>Cep: 13490-000<br>Fone: (19) 3546-8193 / 3546-8204</p>
 
 </div>
 
 <!--Imagem Filial PE-->
-<div class="posicao_img_pe">
+<div class="posicao_img_pe ">
 
     <img src="../img/filiais/filial_pe.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto PE-->
-<div class="posicao_texto_pe">
+<div class="posicao_texto_pe ">
     <p>Cidade: Trindade, PE<br>Rua: Osvaldo Cruz<br>Nº 381<br>Bairro: Centro<br>Cep: 56250-000 </p>
 </div>
 <!--Imagem Filial PB-->
-<div class="posicao_img_pb">
+<div class="posicao_img_pb ">
 
     <img src="../img/filiais/filial_pb.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial PB-->
-<div class="posicao_texto_pb">
+<div class="posicao_texto_pb ">
     <p>Cidade: Bayeux, PB<br>Rua: Francisco Marques da Fonseca<br>Nº 206<br>Bairro: Alto da Boa Vista<br>Cep: 58308-001
     </p>
 </div>
 <!--Imagem Filial MG-->
-<div class="posicao_img_mg">
+<div class="posicao_img_mg ">
 
     <img src="../img/filiais/filial_mg.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial MG-->
-<div class="posicao_texto_mg">
+<div class="posicao_texto_mg ">
     <p>Cidade: Estiva, MG<br>Rodovia: Fernao Dias, Km 817<br>Nº S/N<br>Bairro: Corrego dos Mulatos<br>Cep: 37542-000
     </p>
 </div>
 <!--Imagem Filial BA-->
-<div class="posicao_img_ba">
+<div class="posicao_img_ba ">
 
     <img src="../img/filiais/filial_ba.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial BA-->
-<div class="posicao_texto_ba">
+<div class="posicao_texto_ba ">
     <p>Cidade: Barreiras, BA<br>Rodovia: BR 242 020, Km 577,5<br>Nº S/N<br>Bairro: Area Rural de Barreiras<br>Cep: 47819-899 </p>
 </div>
 <!--Imagem Filial PA-->
-<div class="posicao_img_pa">
+<div class="posicao_img_pa ">
 
     <img src="../img/filiais/filial_pa.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial PA-->
-<div class="posicao_texto_pa">
+<div class="posicao_texto_pa ">
     <p>Cidade: Paragominas, PA<br>Rodovia: BR 010, Km 1650<br>Nº S/N<br>Bairro: Nagibão<br>Cep: 68625-970 </p>
 </div>
 <!--Imagem Filial PR-->
-<div class="posicao_img_pr">
+<div class="posicao_img_pr ">
 
     <img src="../img/filiais/filial_pr.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial PR-->
-<div class="posicao_texto_pr">
+<div class="posicao_texto_pr ">
     <p>Cidade: São José dos Pinhais, PR<br>Rodovia: BR 376, Km 626<br>Sala: 06<br>Bairro: Campo Largo da Roseira<br>Cep: 83090-360 </p>
 </div>
 <!--Imagem Filial RS-->
-<div class="posicao_img_rs">
+<div class="posicao_img_rs ">
 
     <img src="../img/filiais/filial_rs.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
 </div>
 
 <!--Pocisão Texto Filial RS-->
-<div class="posicao_texto_rs">
+<div class="posicao_texto_rs ">
     <p>Cidade: Santo Antonio da Patrulha, RS<br>Rua: João Carlos Benficad<br>Numero: 474<br>Bairro: Local de Passos da Cruz
         <br>Cep: 95500-000 </p>
 </div>
 <!--Area de Atuacao-->
-<div id="div_area_atuacao">
+<div id="div_area_atuacao ">
     <br>
     <br>
     <br>
     <br>
     <center>
-        <h1 class="titulo_branco">
+        <h1 class="titulo_branco ">
             ÁREA DE ATUAÇÃO</h1>
         <br>
         <br>
         <br>
-    </center> <img class="posicao_img_area_atuacao" src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; " <br>
+    </center> <img class="posicao_img_area_atuacao " src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; " <br>
     <br>
     <br>
     <br>
 </div>
 <div>
-    <ul class="paragrafo_branco">
-        <li class="posicao_texto_area_atuacao">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
+    <ul class="paragrafo_branco ">
+        <li class="posicao_texto_area_atuacao ">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
 
     </ul>
 </div>
 <!--Contato-->
 
-<div class="titulo_azul">
+<div class="titulo_azul ">
     <center>
         <h2>CONTATO</h2>
     </center>
@@ -432,7 +432,7 @@
     <h2>Nossos Endereços</h2>
 </center>
 <!--Texto Contato1-->
-<div class="posicao_texto_contato1">
+<div class="posicao_texto_contato1 ">
 
     <br><br><br>
     <p>Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
@@ -442,7 +442,7 @@
 
 </div>
 <!--Texto Contato2-->
-<div class="posicao_texto_contato2">
+<div class="posicao_texto_contato2 ">
 
     <br><br><br>
     <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
@@ -452,13 +452,13 @@
 
 </div>
 <!--Rodape-->
-<div id="div_rodape">
+<div id="div_rodape ">
     <br>
     <br>
     <br>
     <br>
     <center><img src=" ../img/webmail.png " alt=" " /></center>
-    <a class="posicao_texto_webmail" href="https://br924.hostgator.com.br:2096" target="_blank">WebMail</a>
+    <a class="posicao_texto_webmail " href="https://br924.hostgator.com.br:2096 " target="_blank ">WebMail</a>
     <div>
         <center><img src="../img/curriculo.png " alt=" " <i>Envie Seu Currículo</i>
         </center>
