--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     <link href="../css/area_atuacao.css" rel="stylesheet">
     <link href="../css/contato.css" rel="stylesheet">
     <link href="../css/rodape.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
